# butt-gravity-2

./: Cargo.toml  LICENSE.md  README.md  index.html
.github/workflows/: cd-wasm.yml  rust.yml
pkg/: butt_gravity_2.js  package.json
src/: lib.rs  main.rs
src/app/: camera_controller.rs  mod.rs
src/renderer/: camera.rs  compute_passes.rs  mod.rs  phys_state.rs  pipelines.rs  render_passes.rs  texture.rs
src/renderer/compute_passes/: step_a_y4.rs
src/renderer/pipelines/: body_draw_pipeline.rs  grid_pipeline.rs
src/renderer/render_passes/: body_draw_pass.rs  egui_pass.rs  grid_pass.rs
src/shaders/: body_draw_pass.wgsl  drift_y4.wgsl  grid.wgsl  kick_y4.wgsl  step_a_y4.wgsl  step_y4.wgsl
