[package]
name = "butt-gravity-2"
description = "A 3D orbital systems visualizer"
repository = "https://github.com/illegitimate-egg/butt-gravity-2"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Cameron Peck <cameron@humaneyestudio.co.uk>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "butt-gravity-2"
path = "src/main.rs"

# Causes issues with wasm-opt
# [profile.release]
# strip = true

[dependencies]
anyhow = "1.0"
egui = "0.34"
egui-wgpu = "0.34"
env_logger = "0.11"
glam = "0.33"
log = "0.4.32"
pollster = "0.4"
wgpu = "29.0"
winit = "0.30"
egui-winit = { version = "0.34", default-features = false, features = ["bytemuck", "links", "wayland", "x11"]}
bytemuck = { version = "1.25", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "29.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
]}
js-sys = "0.3"
web-time = "1.1.0"
